# playg

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
Java/example/src/: AlgoFrame.java  AlgoVisHelper.java  AlgoVisualizer.java  Circle.java  Main.java
Java/template/money/: AlgoFrame.java  AlgoVisualizer.java
Java/template/monte_carlo/: AlgoFrame.java  AlgoVisualizer.java  Circle.java  MentoCarloPiData.java
examples/: CMakeLists.txt  drawing.c  packing.c
examples/builder/: builder.c  builder.glade
oo/: dlist.h  double-list.h  main.c  pm-dlist.c  pm-dlist.h
tfetextview/: tfetextview.c
trivial/: Makefile  exampleapp.c  exampleapp.gresource.xml  exampleapp.h  exampleappprefs.c  exampleappprefs.h  exampleappwin.c  exampleappwin.h  gears-menu.glade  main.c  meson.build  resources.c  window.glade
trivial/resources/: Makefile  exampleapp.gresource.xml  gears-menu.glade  org.gtk.exampleapp.gschema.xml  prefs.glade  window.glade
turtle/: meson.build  turtle.h  turtle.lex  turtle.ui  turtle.y  turtleapplication.c
tutorial/: ball.c  box.c  drawarea.c  meson.build  neoball.c  resources.c  scrolled_text.c  square.c  tfc.c  tfc.gresource.xml  tfe1.c  tfe2.c  tfe3.c  tfe3.gresource.xml  tfe3_r.c  tfv3.c  tfv4.c
tutorial/menu/: menu1.c  menu2.c  menu3.c  menu3.gresource.xml  meson.build
tutorial/tfe/: tfe.c  tfe.gresource.xml  tfe.h  tfeapplication.c  tfenotebook.c  tfenotebook.h  tfetextview.c  tfetextview.h
